objects/GRP_CC_CollectBQS__c.object
<CustomObject>
    <description>GRP_CC Connected Customer Application Object</description>
    <fields>
        <fullName>GRP_CC_BrandQualitySize__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BrandQualitySize</label>
        <referenceTo>CORE_BrandQualitySize__c</referenceTo>
        <relationshipLabel>CollectBQSs</relationshipLabel>
        <relationshipName>CollectBQs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Collect__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Collect</label>
        <referenceTo>GRP_CC_Collect__c</referenceTo>
        <relationshipLabel>CollectBQSs</relationshipLabel>
        <relationshipName>CollectBQs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Collect BQS</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Coll-{0000000000}</displayFormat>
        <label>CollectBQS Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CollectBQSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>